metadata/objects/fragment1__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula100__c</fullName>
        <formula>true</formula>
        <label>Formula100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula82__c</fullName>
        <formula>true</formula>
        <label>Formula82</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula83__c</fullName>
        <formula>true</formula>
        <label>Formula83</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea71__c</fullName>
        <label>LongTextArea71</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea72__c</fullName>
        <label>LongTextArea72</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea73__c</fullName>
        <label>LongTextArea73</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number41__c</fullName>
        <label>Number41</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number42__c</fullName>
        <label>Number42</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number43__c</fullName>
        <label>Number43</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>fragment1</label>
    <nameField>
        <displayFormat>fragment1-{0000000}</displayFormat>
        <label>fragment1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>